<resources>
    <string name="app_name" >course work 2</string>
    <string name="add_meals_to_db">ADD MEALS TO DB</string>
    <string name="add_meals_to_database">add meals to database</string>
    <string name="meal">meal</string>
    <string name="drink_alternate">drink alternate</string>
    <string name="category">category</string>
    <string name="area">area</string>
    <string name="instructions">instructions</string>
    <string name="meal_thumb">meal thumb</string>
    <string name="tags">tags</string>
    <string name="you_tube">you tube</string>
    <string name="ingredients">ingredients</string>
    <string name="ingredient_1">ingredient1</string>
    <string name="ingredient_2">ingredient2</string>
    <string name="ingredient_3">ingredient3</string>
    <string name="ingredient_4">ingredient4\\</string>
    <string name="ingredient_5">ingredient5</string>
    <string name="ingredient_6">ingredient6</string>
    <string name="ingredient_7">ingredient7</string>
    <string name="ingredient_8">ingredient8</string>
    <string name="ingredient_9">ingredient9</string>
    <string name="ingredient_10">ingredient10</string>
    <string name="measures">measures</string>
    <string name="button">button</string>
    <string name="date_modified">date</string>
    <string name="creative_commons_confirmed">creative</string>
    <string name="image_source">image</string>
    <string name="source">source</string>
    <string name="measure_10">measure10</string>
    <string name="measure_9">measure9</string>
    <string name="measure_8">measure8</string>
    <string name="measure_7">measure7</string>
    <string name="measure_6">measure6</string>
    <string name="measure_5">measure5</string>
    <string name="measure_4">measure4</string>
    <string name="measure_3">measure3</string>
    <string name="measure_2">measure2</string>
    <string name="measure_1">measure1</string>
    <string name="search_for_meals_by_ingredient">Search for meals by ingredient</string>
    <string name="ingredient">Ingredient</string>
    <string name="retrieve_meals">Retrieve Meals</string>
    <string name="list_view">list View</string>
    <string name="save_meals_to_db">Save meals to DB</string>
    <string name="search_for_meals">Search for meals</string>
    <string name="enter_meal">Enter meal</string>
    <string name="search">search</string>
    <string name="result">Result</string>
    <string name="results">Results:</string>
    <string name="meal_thumbnail" />
    <string name="add_meals_to_db2">ADD MEALS TO DB</string>
    <string name="ingredient4new">ingredient4</string>
    <string name="add_to_db">ADD TO DB</string>
    <string name="retrieve_mealspg3">Retrieve Meals</string>
    <string name="enter_an_ingredient">Enter an ingredient</string>
    <string name="retrieved_directly_from_web">Retrieved directly from web</string>
    <string name="enter_search_string">Enter search string</string>
    <string name="searchFromWeb">Search</string>
    <string name="searchWeb">search</string>
    <string name="resultsWeb">Results:</string>
    <string name="type_a_string">Type a String</string>
    <string name="done">Done !</string>
</resources>